# cookiecutter-cpp-project

{{cookiecutter.project_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/app/: CMakeLists.txt
{{cookiecutter.project_slug}}/python/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/: CMakeLists.txt
